BUGFIX: Take care that the button margin is visible
The buttons in the edit pane always overrides the margin-right.
So we now define a lastItem class that only resets the margin-right
for the last button in the edit pane.

--- a/packages/neos-ui/src/Containers/EditModePanel/style.css
+++ b/packages/neos-ui/src/Containers/EditModePanel/style.css
@@ -38,8 +38,8 @@
     margin-right: 1rem;
     white-space: nowrap;
 
-    &:last-child {
-        margin-right: 0;
+    &:.editModePanel__lastButtonWrapper {
+        margin-right: 1rem;
     }
 }
 
